fix: set correct gap for navigation buttons (#309)

--- a/src/components/Search/Suggest.scss
+++ b/src/components/Search/Suggest.scss
@@ -7,7 +7,6 @@
     align-items: center;
     float: right;
 
-    margin-right: 20px;
     min-width: 200px;
     width: auto;
     transition:
